--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 <body class="container">
     <div class="card">
-        <img src="recipe-page-main/assets/images/image-omelette.jpeg" alt="Omelette"
-            class="main-image">
-        <div class="content">rebaseall
+        <img src="recipe-page-main/assets/images/image-omelette.jpeg" alt="Omelette" class="main-image">
+        <div class="content">
 
             <h1>Simple Omelette Recipe</h1>
             <p class="intro">An easy and quick dish, perfect for any meal. This classic omelette combines beaten
